--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: beige;
 }
 
-a{
+a {
     display: inline-block;
     padding: 1rem 1.5rem;
     background-color: orangered;
@@ -18,24 +18,23 @@ a{
     transition: translate 450ms;
     position: relative;
     z-index: 1;
-    translate: -.5rem .5rem;
+    translate: -0.5rem 0.5rem;
 }
 
-a::after{
+a::after {
     content: "";
     position: absolute;
     z-index: -1;
     inset: 0;
-    border: 2px solid rgb(0 0 0 / .7);
+    border: 2px solid rgb(0 0 0 / 0.7);
     transition: translate 450ms;
-    translate: .5rem -.5rem;
+    translate: 0.5rem -0.5rem;
 }
 
-a:hover::after{
+a:hover::after {
     translate: 0 0;
 }
 
-a:hover{
+a:hover {
     translate: 0 0;
 }
-
